--- a/views/tools.html
+++ b/views/tools.html
@@ -1,3 +1,5 @@
 <header role="banner">
-  <h1><a class="lab btn" href="/">Hailpixel Lab</a></h1><h1><a class="btn" href="/{{ id }}">{{ title }}</a></h1>
+  <nav>
+    <a class="btn" href="http://hailpixel.com">Hailpixel</a><h1><a class="lab btn" href="/">Lab</a></h1><h1><a class="btn" href="/{{ id }}">{{ title }}</a></h1>
+  </nav>
 </header>
