--- a/views/1.html
+++ b/views/1.html
@@ -3,8 +3,8 @@
   <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title>Lab 1 :: Mesh Jelly</title>
-      <meta name="description" content="DVNHNT 001">
+      <title>Hailpixel Lab - Mesh Jelly</title>
+      <meta name="description" content="Hailpixel Lab 1: a jelly picture. ">
       <meta name="viewport" content="width=device-width">
       <link rel="stylesheet" href="/static/1/css/normalize.css">
       <link rel="stylesheet" href="/static/1/css/main.css">
